# proxmox-k8s

./: .env.example  .gitignore  .mcp.json  MCP_SETUP.md  README.md  SETUP_COMPLETE.md  mcp-server.json
.gitea/workflows/: build-app-registry.yaml
apps/agent-progress/: Dockerfile  package-lock.json  package.json
apps/app-registry/: README.md  apps.json
apps/conversation-history/: .dockerignore  Dockerfile  README.md  alembic.ini  init.sql  pyproject.toml
apps/conversation-history/alembic/: env.py
apps/conversation-history/alembic/versions/: 001_initial.py  002_add_source_id.py
apps/conversation-history/src/conversation_history/: __init__.py  cli.py  config.py
apps/conversation-history/src/conversation_history/db/: __init__.py  engine.py  models.py  source_engine.py
apps/conversation-history/src/conversation_history/indexer/: __init__.py  agent_progress_source.py  embedder.py  indexer.py  scanner.py  source.py
apps/conversation-history/src/conversation_history/mcp/: __init__.py  server.py
apps/conversation-history/src/conversation_history/mcp/tools/: __init__.py  browse.py  search.py  sync.py
apps/monarch-api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/monarch-api/migrations/: env.py
apps/monarch-api/migrations/versions/: 001_initial_schema.py  002_add_credentials.py  003_add_api_tokens.py
apps/monarch-api/src/monarch_api/: __init__.py  __main__.py  cli.py  config.py  dependencies.py  exceptions.py  export.py  login.py  main.py
apps/monarch-api/src/monarch_api/auth/: __init__.py  dependencies.py
apps/monarch-api/src/monarch_api/db/: __init__.py  engine.py  models.py  repositories.py
apps/monarch-api/src/monarch_api/mcp/: __init__.py  resources.py  server.py
apps/monarch-api/src/monarch_api/mcp/tools/: __init__.py  accounts.py  analytics.py  export.py  sync.py  transactions.py
apps/monarch-api/src/monarch_api/reports/: __init__.py  cli.py  config.py  data_loader.py  formatters.py  generator.py
apps/monarch-api/src/monarch_api/reports/sheets/: __init__.py  accounts.py  base.py  categories.py  monthly.py  summary.py  transactions.py
apps/monarch-api/src/monarch_api/routers/: __init__.py  accounts.py  auth.py  budgets.py  cashflow.py  categories.py  sync.py  tokens.py  transactions.py
apps/monarch-api/src/monarch_api/schemas/: __init__.py  accounts.py  auth.py  budgets.py  cashflow.py  categories.py  common.py  tokens.py  transactions.py
apps/monarch-api/src/monarch_api/static/: auth.html
apps/monarch-api/src/monarch_api/sync/: __init__.py  handlers.py  scheduler.py  service.py
apps/ncsoccer-scraper/: Dockerfile  README.md  config.yaml  pyproject.toml
apps/ncsoccer-scraper/src/ncsoccer/: __init__.py  all_games_store.py  analysis.py  cli.py  config.py  discovery.py  display.py  mcp_server.py  models.py  s3_sync.py  scraper.py  storage.py
apps/ncsoccer-scraper/src/ncsoccer/db/: __init__.py  embedder.py  engine.py  models.py
apps/perfin-analysis/: Dockerfile  pyproject.toml
apps/perfin-analysis/src/perfin_mcp/: server.py
apps/perfin-analysis/src/perfin_mcp/tools/: __init__.py  budget.py  compare.py  fixed_costs.py  report.py  spending.py
apps/voice-agent/: .gitignore  README.md  bot.py  env.example  pyproject.toml  test_local.py
claude/agents/: mcp-developer.md
cluster/: README.md
cluster/core/: kustomization.yaml
cluster/databases/: kustomization.yaml
cluster/platform/: kustomization.yaml
cluster/secrets/: kustomization.yaml
deploy/argocd/: README.md  (+7 more)
mcp-server/: package-lock.json  package.json
scripts/: README.md  add-device.sh  add-dns.sh  add-monitoring-to-registry.sh  bootstrap-gitops.sh  build-app-registry.sh  configure-registry.sh  create-app.sh  create-argocd-app.sh  deploy-app-gitea.sh  deploy-app.sh  gitea-actions.sh  gitea-add-to-argocd.sh  gitea-create-repo.sh  gitea-setup-repo.sh  scan-network.sh
templates/: README.md
terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
(+230 files in other folders)
