[project]
name = "conversation-history"
version = "0.1.0"
description = "Vector database and MCP server for conversation history search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "greenlet>=3.0.0",
    "pgvector>=0.3.0",
    # MCP
    "mcp>=1.0.0",
    # Embeddings
    "openai>=1.0.0",
    # Config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # Utilities
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
conversation-history-mcp = "conversation_history.mcp.server:main"
conversation-history-index = "conversation_history.cli:index_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conversation_history"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
