[project]
name = "monarch-api"
version = "0.1.1"
description = "FastAPI REST API wrapper for Monarch Money"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "monarchmoney>=0.1.15",
    "fastapi>=0.109.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.0.0",
    "browser-cookie3>=0.20.1",
    "gql<4.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "greenlet>=3.0.0",
    # MCP
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
monarch-api = "monarch_api.__main__:main"
monarch-export = "monarch_api.export:main"
monarch-report = "monarch_api.reports.cli:main"
monarch-login = "monarch_api.login:main"
monarch-mcp = "monarch_api.mcp.server:main"
monarch-admin = "monarch_api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/monarch_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
